--- a/src/app/words/searchbar/searchbar.component.html
+++ b/src/app/words/searchbar/searchbar.component.html
@@ -1,1 +1,4 @@
-<input type="search" [placeholder]="languageName() ? 'Search words in ' + languageName() : ''">
+<div>
+    <input type="search" [placeholder]="languageName() ? 'Search words in ' + languageName() : ''">
+    <button>Search</button>
+</div>
