--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-    --beige: #F7EFE5;
+    --main1: #F5F5F5;
+    --main2: #48CFCB;
+    --main3: #229799;
+    --main4: #424242;
+
+    --background: white;
+    --midground: #707070;
+    --foreground: #424242;
+
+    /* --beige: #F7EFE5;
     --purple1: #E2BFD9;
     --purple2: #C8A1E0;
-    --purple3: #674188;
+    --purple3: #674188; */
 }
 
 body {
@@ -14,4 +23,15 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: var(--beige);
+}
+
+[formgroupname].ng-invalid.ng-touched.ng-dirty label,
+.control:has(.ng-invalid.ng-touched.ng-dirty) label {
+    color: #f98b75;
+}
+
+[formgroupname].ng-invalid.ng-touched.ng-dirty input,
+input.ng-invalid.ng-touched.ng-dirty {
+    background-color: #fbdcd6;
+    border-color: #f84e2c;
 }
