Added new language form

--- a/src/app/languages/language-list/language-list.component.html
+++ b/src/app/languages/language-list/language-list.component.html
@@ -3,6 +3,6 @@
         <app-language [language]="language" />
     }
     @if (authenticated()) {
-        <a [routerLink]="['admin', 'languages', 'add']" routerLinkActive="selected">+</a>
+        <a [routerLink]="['admin', 'languages', 'new']" routerLinkActive="selected">+</a>
     }
 </article>
