--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,64 @@ body {
     background-color: var(--beige);
 }
 
+a {
+    display: block;
+    background-color: var(--main4);
+    font-size: large;
+    color: var(--main1);
+    text-align: center;
+    user-select: none;
+    text-decoration: none;
+    border: 2px solid var(--main4);
+}
+
+.selected {
+    color: var(--main4);
+    background-color: var(--main3);
+    border: 2px solid var(--main4);
+}
+
+.form {
+    width: fit-content;
+    padding: 20px;
+    color: var(--main4);
+    background-color: var(--main2);
+    border: 2px solid var(--main4);
+}
+
+.input-group {
+    margin-bottom: 10px;
+}
+
+input {
+    display: block;
+    width: 20em;
+    border: 0;
+    height: 2em;
+    font-family: "Poppins", system-ui;
+    font-size: medium;
+    color: var(--foreground);
+    background-color: var(--background);
+    border: 2px solid var(--main3);
+}
+
+button {
+    border: none;
+    color: var(--main1);
+    background-color: var(--main4);
+    font-size: medium;
+    height: 2em;
+    width: 5em;
+}
+button:hover {
+    color: var(--main4);
+    background-color: var(--main3);
+    border: 2px solid var(--main4);
+}
+button:active {
+    background-color: var(--main2);
+}
+
 [formgroupname].ng-invalid.ng-touched.ng-dirty label,
 .control:has(.ng-invalid.ng-touched.ng-dirty) label {
     color: #f98b75;
@@ -34,4 +92,22 @@ body {
 input.ng-invalid.ng-touched.ng-dirty {
     background-color: #fbdcd6;
     border-color: #f84e2c;
+}
+
+@media (max-width: 800px) {
+    .form {
+        width: 85%;
+    }
+
+    .input-group > input {
+        width: 100%;
+    }
+
+    .form > button {
+        width: 100%;
+    }
+
+    .form > h1 {
+        text-align: center;
+    }
 }
