Added new word form Added logout route Fixed delete language route

--- a/src/app/admin/edit-language/edit-language.component.html
+++ b/src/app/admin/edit-language/edit-language.component.html
@@ -5,7 +5,7 @@
         <input
             id="language-name"
             name="language-name"
-            [value]="languageName()"
+            [placeholder]="languageName() === '' || undefined ? '' : languageName()"
             formControlName="languageName"
         />
     </div>
