Added sign out button

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,7 @@
 <section>
     <h1>Admin Section</h1>
     <router-outlet />
+    <article>
+        <button (click)="signOut()">Sign out</button>
+    </article>
 </section>
