--- a/src/app/languages/language/language.component.html
+++ b/src/app/languages/language/language.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [class.unauthenticated]="!authenticated()">
     <a [routerLink]="['languages', language().language_id]" routerLinkActive="selected">
         {{ language().name }}
     </a>
