Fixed add word button showing up unauthenticated

--- a/src/app/words/words-list/words-list.component.html
+++ b/src/app/words/words-list/words-list.component.html
@@ -1,5 +1,7 @@
 <app-searchbar [languageName]="languageName()" />
+@if (authenticated()) {
 <a [routerLink]="'/admin/languages/' + languageId() + '/words/new'">+</a>
+}
 @for (word of words(); track word.word_id) {
     <app-word [word]="word" />
 }
