--- a/src/app/words/searchbar/searchbar.component.css
+++ b/src/app/words/searchbar/searchbar.component.css
@@ -1,6 +1,20 @@
 form {
     display: flex;
     gap: 5px;
+
+    background-color: var(--background);
+    position: sticky;
+    top: 60px;
+    z-index: 1;
+}
+
+div {
+    background-color: var(--background);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
 }
 
 input {
@@ -40,6 +54,14 @@ button:active {
 }
 
 @media (max-width: 800px) {
+    form {
+        top: 40px;
+    }
+
+    div {
+        height: 50px;
+    }
+        
     input {
         font-size: medium;
     }
