--- a/src/app/words/searchbar/searchbar.component.html
+++ b/src/app/words/searchbar/searchbar.component.html
@@ -1,8 +1,10 @@
+<div></div>
 <form (ngSubmit)="onSubmit()">
     <input
         type="search"
         name="search"
         id="search"
+        autocomplete="off"
         [(ngModel)]="search"
         [placeholder]="
             languageName() ? 'Search words in ' + languageName() : ''
