--- a/src/app/words/word/word.component.css
+++ b/src/app/words/word/word.component.css
@@ -10,12 +10,21 @@ section {
 
 div {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: baseline;
     gap: 10px;
 
     padding: 0;
     margin: 0;
+}
+
+a {
+    background: none;
+    border: none;
+    color: var(--main4);
+    font-size: x-large;
+    font-weight: 500;
+    margin-right: 20px;
 }
 
 h1 {
