--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --main1: #F5F5F5;
@@ -19,13 +20,14 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: "Poppins", system-ui;
+    font-family: "Noto Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
     background-color: var(--beige);
 }
 
 a {
+    font-family: "Noto Sans", sans-serif;
     display: block;
     background-color: var(--main4);
     font-size: large;
@@ -75,7 +77,7 @@ input, textarea {
     display: block;
     width: 20em;
     border: 0;
-    font-family: "Poppins", system-ui;
+    font-family: "Noto Sans", sans-serif;
     font-size: medium;
     color: var(--foreground);
     background-color: var(--background);
@@ -89,6 +91,7 @@ textarea {
 }
 
 button {
+    font-family: "Noto Sans", sans-serif;
     border: none;
     color: var(--main1);
     background-color: var(--main4);
