Added sign in error message Editing word now reroutes you back to the language's word list

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -4,6 +4,17 @@ h1 {
     margin: 0 0 10px 0;
 }
 
+p {
+    width: 20vw;
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 5px;
+    max-width: 25vw;
+    color: var(--error3);
+    background-color: var(--error1);
+    border: 2px solid var(--error2);
+}
+
 @media (max-width: 800px) {
     form {
         width: 85%;
