--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,5 +8,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" formControlName="password">
     </div>
+    @if (errorMessage() !== "") {
+    <p>{{ errorMessage() }}</p>
+    }
     <button>Sign In</button>
 </form>
