--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
     --main3: #229799;
     --main4: #424242;
 
+    --error1: #fbdcd6;
+    --error2: #f98b75;
+    --error3: #f84e2c;
+
     --background: white;
     --midground: #707070;
     --foreground: #424242;
