Add word button now sticks to top

--- a/src/app/words/searchbar/searchbar.component.html
+++ b/src/app/words/searchbar/searchbar.component.html
@@ -12,3 +12,6 @@
     />
     <button>Search</button>
 </form>
+@if (authenticated()) {
+<a [routerLink]="'/admin/languages/' + languageId() + '/words/new'">+</a>
+}
