--- a/src/app/words/words-list/words-list.component.html
+++ b/src/app/words/words-list/words-list.component.html
@@ -1,7 +1,4 @@
-<app-searchbar [languageName]="languageName()" />
-@if (authenticated()) {
-<a [routerLink]="'/admin/languages/' + languageId() + '/words/new'">+</a>
-}
+<app-searchbar [languageId]="languageId()" [languageName]="languageName()" />
 @for (word of words(); track word.word_id) {
     <app-word [word]="word" />
 }
