--- a/src/app/words/searchbar/searchbar.component.css
+++ b/src/app/words/searchbar/searchbar.component.css
@@ -14,7 +14,7 @@ div {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100px;
+    height: 102px;
 }
 
 input {
@@ -52,13 +52,34 @@ button:active {
     border: 2px solid var(--main4);
 }
 
+a {
+    position: sticky;
+    top: 102px;
+    z-index: 1;
+
+    color: var(--foreground);
+    background-color: var(--background);
+    width: 85%;
+    padding: 0 10px 0 10px;
+    margin-top: 10px;
+    border: 2px solid var(--main4);
+    font-size: large;
+    font-weight: 500;
+}
+
 @media (max-width: 800px) {
+    a {
+        position: sticky;
+        top: 80px;
+        z-index: 1;
+    }
+
     form {
         top: 40px;
     }
 
     div {
-        height: 50px;
+        height: 90px;
     }
         
     input {
