Search refreshes on clear

--- a/src/app/words/searchbar/searchbar.component.html
+++ b/src/app/words/searchbar/searchbar.component.html
@@ -1,5 +1,5 @@
 <div></div>
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()" (input)="onTextChanged()">
     <input
         type="search"
         name="search"
