--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
-    <h1>Conlang Dictionary</h1>
+    <div class="heading">
+        <h1>Ouenjs</h1>
+        <h2>Conlang Dictionary</h2>
+    </div>
     <a [routerLink]="['login']" routerLinkActive="selected">{{
         username() === ""
             ? "Admin Sign In"
