--- a/src/app/words/words-list/words-list.component.html
+++ b/src/app/words/words-list/words-list.component.html
@@ -1,4 +1,4 @@
-<app-searchbar [languageId]="languageId()" [languageName]="languageName()" />
+<app-searchbar />
 @for (word of words(); track word.word_id) {
     <app-word [word]="word" />
 }
