--- a/src/app/words/word/word.component.css
+++ b/src/app/words/word/word.component.css
@@ -6,6 +6,9 @@ section {
     padding: 10px;
     margin-top: 11px;
     border: 2px solid var(--main4);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    transition: all 100ms ease-in-out;
 }
 
 div {
